--- a/css/site.css
+++ b/css/site.css
@@ -63,3 +63,16 @@ pre[class*="language-"]{
   word-break: break-all;
   word-wrap: break-word;
 }
+
+.Fizz {
+  color: darkgreen;
+}
+
+.Buzz {
+  color: darkblue;
+}
+
+.FizzBuzz {
+  color: red;
+  font-weight: bold;
+}
